--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -6,36 +6,98 @@ $neon-pink: #F25CA2;
 $medium-blue: #0433BF;
 $blue: #032CA6;
 $dark-blue: #021859;
-$light-blue: #0B9ED9;
-$grey: #efefef;
+$light-blue: #498fcc;
+$grey: #636363;
+$white: #ffffff;
+
 html {
   font-size: 100%; // 1rem is 16px;
 }
 
 body {
   font-size: 1rem;
-  background: $grey;
+  background: $white;
 }
 
-.navbar-dark {
-  background: $blue;
+img {
+  border: 0;
 }
-.dropdown-menu {
-  padding: 0;
-  border-radius: 0;
-  .dropdown-item {
-    padding: 0.5rem 1rem;
-    &:hover, &:focus {
-      color: white;
-      background: $blue;
+
+.navbar-light {
+  background: $white;
+
+  .navbar-brand {
+    font-size: 1rem;
+  }
+
+  .navbar-toggler {
+    border: 0;
+
+    &:focus {
+      box-shadow: none;
+    }
+
+    &[aria-expanded="true"] {
+      .navbar-toggler-icon {
+        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000'%3e%3cpath d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/%3e%3c/svg%3e");
+        background-size: 70%;
+        opacity: 0.55;
+      }
+    }
+  }
+
+  .navbar-collapse {
+    background-color: $light-blue;
+
+    @media (min-width:992px) {
+      background-color: $white;
+    }
+
+    .navbar-nav {
+      font-weight: bold;
+  
+      .nav-item {
+        padding-right: 1rem;
+
+        .nav-link {
+          color: $white;
+          text-align: center;
+
+          @media (min-width:992px) {
+            color: $grey;
+            text-align: left;
+          }
+        }
+      }
     }
   }
 }
-main {
-  padding: 2rem 0;
+
+/* main {
+  padding: 3.375rem 0;
+} */
+
+.fix-bg {
+  background-attachment: fixed;
+  background-image: url(../img/banner.jpg);
+  background-position: center 3.75rem;
+  background-repeat: no-repeat;
+  background-size: calc(100% * 1.4);
+  height: 100vw;
+  width: 100%;
+
+  @media (min-width:500px) {
+    background-size: 100%;
+    height: 100vh;
+  }
+
+  @media (min-width:992px) {
+    background-position: center top;
+  }
 }
+
 footer {
-  background: $blue;
+  background: $light-blue;
   a {
     color: white;
     &:hover {
