--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -2,10 +2,6 @@
 /* main css file which loads after bootstrap
  * this file is to be changed as desired
  */
-$neon-pink: #F25CA2;
-$medium-blue: #0433BF;
-$blue: #032CA6;
-$dark-blue: #021859;
 $light-blue: #498fcc;
 $grey: #636363;
 $white: #ffffff;
@@ -80,19 +76,32 @@ img {
 .fix-bg {
   background-attachment: fixed;
   background-image: url(../img/banner.jpg);
-  background-position: center 3.75rem;
+  background-position: center 10%;
   background-repeat: no-repeat;
   background-size: calc(100% * 1.4);
   height: 100vw;
   width: 100%;
 
-  @media (min-width:500px) {
+  @media  (min-width:500px) {
     background-size: 100%;
-    height: 100vh;
+    height: 70vw;
+  }
+
+  @media  (min-width:768px) {
+    background-position: center top;
+    height: 60vw;
   }
 
   @media (min-width:992px) {
-    background-position: center top;
+    height: 100vh;
+  }
+}
+
+.slider-content {
+  max-width: 55rem;
+
+  img {
+    width: 100%;
   }
 }
 
