--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,8 +2,8 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <p class="py-2 px-3 m-0 text-white">
-          &copy; Copyright kenhua-l
+        <p class="py-3 m-0 text-white">
+          &copy; Copyright Bryan Wong
         </p>
       </div>
     </div>
