--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -2,5 +2,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+<link href="css/slick.css" rel="stylesheet" />
+<link href="css/slick-theme.css" rel="stylesheet" />
 <link href="css/bootstrap.min.css" rel="stylesheet" />
 <link href="css/main.css" rel="stylesheet" />
