--- a/src/partials/scripts.html
+++ b/src/partials/scripts.html
@@ -1,3 +1,4 @@
 <script src="js/jquery.min.js" type="text/javascript"></script>
+<script src="js/slick.min.js" type="text/javascript"></script>
 <script src="js/bootstrap.min.js" type="text/javascript"></script>
 <script src="js/main.js" type="text/javascript"></script>
