--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -100,6 +100,10 @@ img {
 .slider-content {
   max-width: 55rem;
 
+  @media  (min-width:768px) {
+    font-size: 2rem;
+  }
+
   img {
     width: 100%;
   }
